added read one, remade read all
